2002-11-19  Adam Fedor  <fedor@gnu.org>

	* Version: 1.5.1
	* Documentation/news.texi: Updated.

2002-11-19  Adam Fedor  <fedor@gnu.org>

	* create_domain_dir_tree.sh (mydir): Use `command` not
	$(command), which doesn't work with all sh's.

2002-11-15  Adam Fedor  <fedor@gnu.org>

	* common.make: Remove duplicate OBJC_RUNTIME_LIB and FOUNDATION_LIB
	setup
	* library-combo.make (GNUSTEP_FND_DIR, RUNTIME_FLAG): Extra flags
	moved from common.make
	(FOUNDAION_LIB=gnu): setup moved from common.make.

	* target.make (darwin5/NeXT cc) (DYLIB_EXTRA_FLAGS,
	DYLIB_DEF_FRAMEWORKS, DYLIB_DEF_LIBS): Comment out or remove.

Wed Nov  6 15:26:07 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Fixed typo - was installing
	config.site into GNUSTEP_SYSTEM_ROOT/shared rather than
	GNUSTEP_SYSTEM_ROOT/share.

Wed Nov  6 12:31:40 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Rewritten framework/subproject interaction so that it supports
	FRAMEWORK_NAME containing multiple framework names.  Framework API
	change warning: CURRENT_VERSION_NAME replaced by
	XXX_CURRENT_VERSION_NAME; DEPLOY_WITH_CURRENT_VERSION replaced by
	XXX_DEPLOY_WITH_CURRENT_VERSION.
	* common.make (CURRENT_VERSION_NAME): Do not define here.
	(DEPLOY_WITH_CURRENT_VERSION): Idem.
	* Instance/framework.make: Added support for
	xxx_CURRENT_VERSION_NAME and xxx_DEPLOY_WITH_CURRENT_VERSION.
	* rules.make (FRAMEWORK_NAME): Do not define here.
	(FRAMEWORK_DIR_NAME): Idem.
	(FRAMEWORK_VERSION_DIR_NAME): Idem.
	* Master/framework.make (FRAMEWORK_NAME): Set here.
	* Instance/framework.make (FRAMEWORK_DIR_NAME,
	FRAMEWORK_VERSION_DIR_NAME): Set here.
	* Master/rules.make (%.subprojects): Pass to submakes for
	subprojects OWNING_PROJECT_HEADER_DIR instead of FRAMEWORK_NAME
	and FRAMEWORK_VERSION_DIR_NAME; set the new variable manually
	depending on the instance we're building.
	(%.variables): Similar change.
	* Master/subproject.make (build-headers): Always define this rule;